# ChangeLog for vmware overlay
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $ Id: $

  12 Oct 2007; Mike Auty <ikelos@gentoo.org>
  app-emulation/open-vm-tools/open-vm-tools-0.0.20071008.99999.ebuild:
  Mask off the broken ebuild.

  12 Oct 2007; Mike Auty <ikelos@gentoo.org>
  -app-emulation/vmware-server-tools/files/1.0.3.44356/000_all_vmware-tools.
  patch,
  -app-emulation/vmware-server-tools/files/patches/000_all_makefile-include-
  directory.patch,
  -app-emulation/vmware-server-tools/files/patches/vmdesched/001_all_kernel-
  2.6.19-syscall.patch,
  -app-emulation/vmware-server-tools/files/patches/vmhgfs/000_all_driver-get
  _sb_nodev.patch,
  -app-emulation/vmware-server-tools/files/patches/vmhgfs/001_all_kernel-2.6
  .19-mount.patch,
  -app-emulation/vmware-server-tools/files/vmware-server-tools.rc,
  -app-emulation/vmware-server-tools/metadata.xml:
  Remove the obsolete vmware-server-tools. People should try out open-vm-tools
  instead.

  12 Oct 2007; Mike Auty <ikelos@gentoo.org> +manifest1_obsolete:
  Get rid of those pesky digest- files.

  12 Oct 2007; Mike Auty <ikelos@gentoo.org> ++:
  Initial commit of 2007-10-08-SNAPSHOT for open-vm-tools.

  06 Oct 2007; Mike Auty <ikelos@gentoo.org>
  app-emulation/vmware-server-console/vmware-server-console-1.0.4.56528.ebui
  ld:
  Ensure vmware-server-console installs a vmware group.

  28 Sep 2007; Mike Auty <ikelos@gentoo.org>
  app-emulation/open-vm-tools/files/open-vm.initd:
  Fix bad test syntax.

  28 Sep 2007; Mike Auty <ikelos@gentoo.org>
  app-emulation/open-vm-tools/open-vm-tools-0.0.20070904.56574.ebuild:
  Fix up digest and post-install information.

  23 Sep 2007; Mike Auty <ikelos@gentoo.org>
  +app-emulation/open-vm-tools/files/open-vm.confd,
  app-emulation/open-vm-tools/files/open-vm.initd, eclass/vmware.eclass:
  Add cleanup comments only when product is completely removed. Also allow
  disabling of DnD in open-vm-tools.
