@@ -4,6 +4,10 @@
 
   12 Oct 2007; Mike Auty <ikelos@gentoo.org>
   app-emulation/open-vm-tools/open-vm-tools-0.0.20071008.99999.ebuild:
+  Fix up ebuild breakage.
+
+  12 Oct 2007; Mike Auty <ikelos@gentoo.org>
+  app-emulation/open-vm-tools/open-vm-tools-0.0.20071008.99999.ebuild:
   Mask off the broken ebuild.
 
   12 Oct 2007; Mike Auty <ikelos@gentoo.org>
